[*] add test for create user and get user_by id
