# api/handlers/shortener.go
@@ -14,6 +14,7 @@ import (
 	"github.com/skip2/go-qrcode"
 )
 
+// @Security ApiKeyAuth
 // CreateShortUrl godoc
 // @ID create_short_url
 // @Router /short-url [POST]
@@ -50,6 +51,7 @@ func (h *Handler) CreateShortUrl(c *gin.Context) {
 	h.handleResponse(c, http_status.OK, resp)
 }
 
+// @Security ApiKeyAuth
 // GetShortUrl godoc
 // @ID get_short_url
 // @Router /short-url/{hash} [GET]
@@ -82,6 +84,7 @@ func (h *Handler) GetShortUrlData(c *gin.Context) {
 	h.handleResponse(c, http_status.OK, resp)
 }
 
+// @Security ApiKeyAuth
 // HandleLonger godoc
 // @ID handle_longer
 // @Router /sigma/{hash} [GET]
@@ -124,6 +127,7 @@ func (h *Handler) HandleLonger(c *gin.Context) {
 	c.Redirect(http.StatusMovedPermanently, resp.GetLongUrl())
 }
 
+// @Security ApiKeyAuth
 // GetAllUserUrls godoc
 // @ID get_all_user_urls
 // @Router /short-url/{user-id} [GET]
@@ -156,6 +160,7 @@ func (h *Handler) GetAllUserUrls(c *gin.Context) {
 	h.handleResponse(c, http_status.OK, resp)
 }
 
+// @Security ApiKeyAuth
 // UrlToQrcode godoc
 // @ID qr_code
 // @Router /url-qrcode [PUT]
